fix: Fix missing background color on overflow

--- a/entrypoints/options/Options.css
+++ b/entrypoints/options/Options.css
@@ -2,13 +2,13 @@
 
 #app-container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .App {
   @apply p-6;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--bg-primary);
   color: var(--text-primary);
 }
